2015-01-24 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCast.c:
	  Fix bug #2239.
	* support/regression/test/bug-2239.c:
	  Add a new test for bug #2239.

2015-01-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  .version:
	  Make sdcc dialect of C99 the default.

2015-01-19 <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc.c,
	  src/mcs51/ralloc.c:
	  Fix register packing inline asm interaction bugs #2346, #2268.

2015-01-09 <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Classification macros are not required in freestanding implementations.

2015-01-08 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCC.y:
	  Fix a bug which might be a NULL pointer access.
	* device/lib/time.c:
	  Eliminate a warning. (overflow in implicit constant conversion)

2015-01-06 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCast.c:
	  Fix bug #2167 & #1967. (auto struct variables initialization)
	* support/regression/tests/gcc-torture-execute-960326-1.c:
	  Add more test cases.
	* support/regression/tests/gcc-torture-execute-20050613-1.c:
	* support/regression/tests/gcc-torture-execute-20030408-1.c:
	  Enable test.

2015-01-01 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCval.c:
	  Make SDCC_VERY_PEDANTIC default, if --less-pedantic is not specified.

2014-12-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: fixed typo, webdoc #69, thanks Petr Petyovsky
	* sdas/linksrc/aslink.h: added include "sdccconf.h" or "sdcc_vc.h"
	* sdas/linksrc/lkar.c: removed include "sdccconf.h"

2014-12-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/pic16/limits.h,
	* device/lib/_divsint.c,
	* device/lib/_divslong.c,
	* device/lib/_divuint.c,
	* device/lib/_divulong.c,
	* device/lib/_memset.c,
	* device/lib/_modsint.c,
	* device/lib/_modslong.c,
	* device/lib/_moduint.c,
	* device/lib/_modulong.c,
	* device/lib/_mulint.c,
	* device/lib/_mullong.c,
	* device/lib/hc08/_divuint.c,
	* device/lib/hc08/_divulong.c,